--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Quadmath = "be4d8f0f-7fa4-5f49-b795-2f01399ab2dd"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
@@ -14,4 +15,5 @@ Combinatorics = "1.0.3"
 Dates = "1.11.0"
 LinearAlgebra = "1.12.0"
 Printf = "1.11.0"
+Quadmath = "0.5.13"
 SpecialFunctions = "2.6.1"
