--- a/Project.toml
+++ b/Project.toml
@@ -3,17 +3,21 @@ uuid = "cc47c51c-0ecc-4c0f-91b5-d4d0d7b48653"
 version = "0.1.0"
 
 [deps]
+Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
-Quadmath = "be4d8f0f-7fa4-5f49-b795-2f01399ab2dd"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
+Arpack = "0.5.4"
+BenchmarkTools = "1.6.3"
 Combinatorics = "1.0.3"
 Dates = "1.11.0"
 LinearAlgebra = "1.12.0"
 Printf = "1.11.0"
-Quadmath = "0.5.13"
+SparseArrays = "1.12.0"
 SpecialFunctions = "2.6.1"
