--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 Arpack = "0.5.4"
@@ -21,3 +22,4 @@ LinearAlgebra = "1.12.0"
 Printf = "1.11.0"
 SparseArrays = "1.12.0"
 SpecialFunctions = "2.6.1"
+Test = "1.11.0"
