--- a/Project.toml
+++ b/Project.toml
@@ -7,7 +7,11 @@ Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
+JacobiDavidson = "11c68b98-9c9b-11e8-267b-bbb95576cead"
+KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
@@ -18,7 +22,11 @@ Arpack = "0.5.4"
 BenchmarkTools = "1.6.3"
 Combinatorics = "1.0.3"
 Dates = "1.11.0"
+IterativeSolvers = "0.9.4"
+JacobiDavidson = "0.1.1"
+KrylovKit = "0.10.2"
 LinearAlgebra = "1.12.0"
+LinearMaps = "3.11.4"
 Printf = "1.11.0"
 SparseArrays = "1.12.0"
 SpecialFunctions = "2.6.1"
